# android-ndk-ffmepg

./: README.md
App_Android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
App_Android/app/jni/: Android.mk  Application.mk
App_Android/app/src/androidTest/java/com/example/local/app_android/: ExampleInstrumentedTest.java
App_Android/app/src/main/: AndroidManifest.xml
App_Android/app/src/main/cpp/: downloader.cpp  downloader.h  gestionnaire.cpp  gestionnaire.h  getrequest.cpp  getrequest.h  lecteur.cpp  lecteur.h  native-lib.cpp
App_Android/app/src/main/java/com/example/local/app_android/: MainActivity.java
App_Android/app/src/main/res/layout/: activity_main.xml
App_Android/app/src/test/java/com/example/local/app_android/: ExampleUnitTest.java
App_Android/distribution/curl/include/: Makefile
App_Android/distribution/curl/include/curl/: Makefile
App_Android/distribution/ffmpeg/armeabi-v7a-neon/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
App_Android/distribution/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
App_Android/distribution/ffmpeg/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
